src/css/custom.css
/* ... */
[data-theme="dark"] .DocSearch {
  --docsearch-text-color: var(--ifm-font-color-base);
  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
  --docsearch-container-background: rgba(47, 55, 69, 0.7);
  --docsearch-modal-background: var(--ifm-background-color);
  --docsearch-searchbox-background: var(--ifm-background-color);
  --docsearch-footer-background: var(--ifm-background-surface-color);
  --docsearch-key-gradient: transparent;
}

/* Custom cloud themes */
.plugin-id-cloud:root {
  --ifm-color-primary: #417c5a;
  --ifm-color-primary-dark: #3b7051;
  --ifm-color-primary-darker: #37694d;
  --ifm-color-primary-darkest: #2e573f;
  --ifm-color-primary-light: #427e5c;
  --ifm-color-primary-lighter: #44815e;
  --ifm-color-primary-lightest: #45835f;
}

.plugin-id-cloud[data-theme="dark"] {
  --ifm-color-primary: #63ffa6;
  --ifm-color-primary-dark: #40ff92;
  --ifm-color-primary-darker: #2eff88;
  --ifm-color-primary-darkest: #00f86a;
  --ifm-color-primary-light: #86ffba;
  --ifm-color-primary-lighter: #98ffc4;
  --ifm-color-primary-lightest: #cdffe3;
}

/* Merge Infima colors to tailwind table */
@theme {
  --color-primary: var(--ifm-color-primary);
  --color-primary-dark: var(--ifm-color-primary-dark);
  --color-primary-darker: var(--ifm-color-primary-darker);
  --color-primary-darkest: var(--ifm-color-primary-darkest);
  --color-primary-light: var(--ifm-color-primary-light);
  --color-primary-lighter: var(--ifm-color-primary-lighter);
  --color-primary-lightest: var(--ifm-color-primary-lightest);
  --color-secondary: var(--ifm-color-secondary);
  --color-secondary-darker: var(--ifm-color-secondary-darker);
  --color-ifm-background: var(--ifm-background-color);
  --color-ifm-background-surface: var(--ifm-background-surface-color);
  --color-ifm-menu: var(--ifm-menu-color);
  --color-pre-background: var(--ifm-pre-background);
}

/* Custom font-faces */
@font-face {
  font-family: "Inter";
  font-style: normal;
  src:
    url("fonts/Inter[wght].woff2") format("woff2 supports variations"),
    url("fonts/Inter[wght].woff2") format("woff2-variations");
  font-weight: 100 900;
}

@font-face {
  font-family: "Inter";
  font-style: italic;
  src:
    url("fonts/Inter-Italic[wght].woff2") format("woff2 supports variations"),
    url("fonts/Inter-Italic[wght].woff2") format("woff2-variations");
  font-weight: 100 900;
}

@font-face {
  font-family: "JetBrains Mono";
  font-style: normal;
  src:
    url("fonts/JetBrainsMono[wght].woff2") format("woff2 supports variations"),
    url("fonts/JetBrainsMono[wght].woff2") format("woff2-variations");
  font-weight: 100 900;
  font-display: swap;
}

@font-face {
  font-family: "JetBrains Mono";
  font-style: italic;
  src:
    url("fonts/JetBrainsMono-Italic[wght].woff2") format("woff2 supports variations"),
    url("fonts/JetBrainsMono-Italic[wght].woff2") format("woff2-variations");
  font-weight: 100 900;
  font-display: swap;
}

/* Custom border for sidebar and navbar */
[class*="docSidebarContainer"] {
  @apply !border-black/10 dark:!border-white/10;
}

.navbar {
  @apply !border-black/10 dark:!border-white/10;
  border-bottom: 1px solid;
}

/* Custom styling for menu */

.menu {
  font-weight: var(--ifm-font-weight-normal);
}

.menu>.menu__list .menu__list {
  @apply !border-black/10 dark:!border-white/10;
  border-left: 1px dashed;
  margin-left: var(--ifm-global-spacing);
}

/* Custom styling for caret in menu */
.menu__link--sublist-caret:after,
.menu__caret:before {
  background: var(--ifm-menu-link-sublist-icon) 50% / 1.5rem 1.5rem;
}

.menu__caret:hover {
  background: transparent;
}

/* Hide pagination container when empty */
.pagination-nav:empty {
  display: none;
}

/* Custom styling for lightbox */
.yarl__flex_center {
  @apply !p-[64px];
  flex-direction: column;
}

.yarl__slide_description_container {
  @apply mt-4 text-white;
}

/* Custom border for alerts */
.alert {
  @apply border;
}

/* Custom styling for anchors */
.anchor {
  @apply flex items-center;
}

.hash-link {
  @apply flex items-center;
}

/* Custom breadcrumbs styling */
.breadcrumbsContainer {
    --ifm-breadcrumb-size-multiplier: 0.8;
    margin-bottom: 0.8rem;
}

.breadcrumbs {
  @apply flex items-center gap-1 text-sm mb-4;
  list-style: none;
  padding: 0;
  margin: 0;
}

.breadcrumbs__item {
  @apply flex items-center gap-1;
}

.breadcrumbs__item:first-child .breadcrumbs__link::before {
  content: '';
  display: inline-block;
  width: 0.75rem;
  height: 0.75rem;
  margin-top: -3px;
  margin-right: 6px;
  background-color: currentColor;
  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='black'%3E%3Cpath d='M12.707 2.293a1 1 0 00-1.414 0l-9 9a1 1 0 001.414 1.414L4 12.414V21a1 1 0 001 1h4a1 1 0 001-1v-5h4v5a1 1 0 001 1h4a1 1 0 001-1v-8.586l.293.293a1 1 0 001.414-1.414l-9-9z'/%3E%3C/svg%3E");
  mask-size: contain;
  mask-repeat: no-repeat;
  mask-position: center;
  -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='black'%3E%3Cpath d='M12.707 2.293a1 1 0 00-1.414 0l-9 9a1 1 0 001.414 1.414L4 12.414V21a1 1 0 001 1h4a1 1 0 001-1v-5h4v5a1 1 0 001 1h4a1 1 0 001-1v-8.586l.293.293a1 1 0 001.414-1.414l-9-9z'/%3E%3C/svg%3E");
  -webkit-mask-size: contain;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-position: center;
}

.breadcrumbs__item--active {
    @apply pointer-events-none;
}

.breadcrumbs__item:not(:last-child)::after {
  content: '';
  @apply text-gray-400 dark:text-gray-600 mx-1;
}

.breadcrumbs__link {
  @apply text-gray-600 dark:text-gray-200 no-underline transition-colors leading-[1];
  display: inline-flex;
  align-items: center;
}

a.breadcrumbs__link:hover {
  @apply text-primary dark:text-primary-light;
}

.breadcrumbs__link--active {
  @apply text-gray-900 dark:text-gray-100 font-medium pointer-events-none;
}
/* ... */

